[package]
name = "Movie-Review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"] 

[dependencies]
ahash = "0.8.6"
borsh = {version = "1.3.0", features = ["derive"]}
solana-program = "1.17.14"
